--- a/css/estilo.css
+++ b/css/estilo.css
@@ -60,3 +60,9 @@ background: linear-gradient(71deg, rgba(39,109,113,1) 6%, rgba(39,109,113,1) 6%,
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: bold;
 }
+
+@media screen and (max-width: 580px) {
+    .display > h2{
+        text-align: center;
+    }
+}
